--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="author" content="totob12" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/things/favicon.ico" />
-    <link rel="shortcut-icon" href="/things/favicon.ico" />
-    <link rel="stylesheet" href="/things/game/css/projects.css" />
-    <script src="/things/game/js/main.js"></script>
+    <link rel="icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico" />
+    <link rel="shortcut-icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico" />
+    <link rel="stylesheet" href="/css/projects.css" />
+    <script src="/js/main.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -97,7 +97,7 @@
     home</span></a></li>
     <li><a class="icon" href="https://TotoB12-Chat.totob12.repl.co/"><span class="material-symbols-outlined">
     forum</span><h10 class=cc>Social</h10></a></li>
-    <li><a class="icon" href="https://totob12.github.io/things/inpainting-forward.html"><span class="material-symbols-outlined">
+    <li><a class="icon" href="https://TotoB12-inpainter.totob12.repl.co"><span class="material-symbols-outlined">
     format_paint</span><h10 class="cc">Paint</h10></a></li>
     <li><a class="icon" href="https://chill-radio.totob12.repl.co/"><span class="material-symbols-outlined">
     radio</span><h10 class="cc">Radio</h10></a></li>
@@ -107,7 +107,7 @@
     handyman</span><h10 class="cc">Random</h10></a></li>
     <li><a class="icon right" href="https://totob12.github.io/things/feedback.html"><span class="material-symbols-outlined">
     alternate_email</span></a></li>
-    <li><a class="icon right" href="https://totob12.github.io/things/countdown.html"><span class="material-symbols-outlined">
+    <li><a class="icon right" href="https://totob12.github.io/countdown"><span class="material-symbols-outlined">
     hourglass_empty</span></a></li>
     </ul>
     <h1 class="title">Classic games</h1>
@@ -115,7 +115,7 @@
     <div class="text-center">
       <input type="text" class="text-center" id="mySearch" onload="startSearch()" onkeyup="startSearch()" placeholder="Search for games..." title="Search" autofocus />
     </div>
-    <script src="/things/game/js/search.js"></script>
+    <script src="/js/search.js"></script>
     </br>
     <!-- Badges
       Hot: <span class="badge"><i class="fa-solid fa-fire"></i> Hot</span>
