--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico" />
     <link rel="shortcut-icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico" />
-    <link rel="stylesheet" href="/css/projects.css" />
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/TotoB12/games-old/main/css/projects.css" />
+    <script src="https://raw.githubusercontent.com/TotoB12/games-old/main/js/main.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
